# docs_classification_ML

./: .gitignore  README.MD  README.md  pyproject.toml
helpers/: ocr_engine.py
notebooks/: 1_data_collection.ipynb  2_data_cleaning_and_transformation.ipynb  3_data_spellcheck.ipynb  3_text_preprocessing_vectorizer_modeltraining_and_prediction.ipynb  4_text_preprocessing_vectorizer_modeltraining_and_prediction.ipynb  5_neural_network_model.ipynb
